@startuml client

!includesub transport.puml!IConnector
!includesub transport.puml!IConnection
IConnector ..> IConnection

class CallResult {
    + is_success() : bool
    + as<T>() : T
    + error() : Error
}

class Client {
    + call<Result, Args...>(name: string, args...: Args...) : CallResult
    + async_call<OnResultFunction, Args...>(on_result: OnResultFunction, name: string, args...: Args...)
    + notify<Args...>(name: string, args...: Args...)
    + async_notify<OnResultFunction, Args...>(on_result: OnResultFunction, name: string, args...: Args...)
}
Client o-- IConnector
Client o-- IConnection
Client ..> CallResult

@enduml
